backport overflow css fix
git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/branches/2.4.x@1450566 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/manual/style/css/prettify.css
+++ b/docs/manual/style/css/prettify.css
@@ -32,7 +32,7 @@
 }
 
 /* Put a border around prettyprinted code snippets. */
-pre.prettyprint { padding: 2px; border: 1px solid #888; tab-size: 4; }
+pre.prettyprint { padding: 2px; border: 1px solid #888; tab-size: 4; overflow: auto; overflow-y: hidden; }
 
 /* Specify class=linenums on a pre to get line numbering */
 ol.linenums { margin-top: 0; margin-bottom: 0 } /* IE indents via margin-left */
